# ircbridge

./: .gitignore  README.md  cabal.project  ci.dhall  default.nix  overlay.nix  shell.nix
.github/workflows/: ci.yaml
ircbridge-aeson/: ircbridge-aeson.cabal
ircbridge-aeson/src/Network/IRC/Bridge/: Aeson.hs
ircbridge-aeson/test/: Main.hs
ircbridge-amqp/: ircbridge-amqp.cabal
ircbridge-amqp-irccat/: Cat.hs  TCPServer.hs  ircbridge-amqp-irccat.cabal
ircbridge-amqp-irccat/src/Network/IRC/Bridge/: IRCCat.hs
ircbridge-amqp-irccat/test/: Main.hs
ircbridge-amqp-util/: Cat.hs  Tail.hs  ircbridge-amqp-util.cabal
ircbridge-amqp-util/src/Network/IRC/Bridge/AMQP/: Util.hs
ircbridge-amqp/src/Network/IRC/Bridge/: AMQP.hs
ircbridge-amqp/src/Network/IRC/Bridge/AMQP/: Serialize.hs
ircbridge-amqp/test/: Main.hs  Serialize.hs
ircbridge-cereal/: ircbridge-cereal.cabal
ircbridge-cereal/src/Network/IRC/Bridge/: Serialize.hs
ircbridge-cereal/test/: Main.hs
ircbridge-ircbot/: ircbridge-ircbot.cabal
ircbridge-ircbot-amqp/: Main.hs  ircbridge-ircbot-amqp.cabal
ircbridge-ircbot-amqp/src/Network/IRC/Bot/Part/: AMQP.hs
ircbridge-ircbot-multi/: Main.hs  ircbridge-ircbot-multi.cabal
ircbridge-ircbot-zre/: Main.hs  ircbridge-ircbot-zre.cabal
ircbridge-ircbot-zre/src/Network/IRC/Bot/Part/: ZRE.hs
ircbridge-ircbot/src/Network/IRC/Bridge/IRC/: Bot.hs
ircbridge-optparse/: ircbridge-optparse.cabal
ircbridge-optparse/src/Network/IRC/Bridge/: Options.hs
ircbridge-pretty/: ircbridge-pretty.cabal
ircbridge-pretty/src/Network/IRC/Bridge/: Pretty.hs
ircbridge-tests/: ircbridge-tests.cabal
ircbridge-tests/src/Network/IRC/Bridge/: Arbitrary.hs
ircbridge-tests/src/Test/Hspec/: Roundtrip.hs
ircbridge-types/: ircbridge-types.cabal
ircbridge-types/src/Network/IRC/Bridge/: Types.hs
ircbridge-zre/: ircbridge-zre.cabal
ircbridge-zre-util/: Cat.hs  Echo.hs  Pretty.hs  Tail.hs  ircbridge-zre-util.cabal
ircbridge-zre-util/src/Network/IRC/Bridge/ZRE/: Util.hs
ircbridge-zre/src/Network/IRC/Bridge/: ZRE.hs
nixos/: amqp.nix  charybdis.nix  example.nix  ircbridge.nix  test.nix
nixos/files/: ircd.conf.example
