name:                ircbridge-aeson
version:             0.1.0.0
synopsis:            IRC bridge instances for aeson
description:         Aeson instances for core types used for IRC message forwarding
homepage:            https://github.com/sorki/ircbridge
license:             BSD3
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2020 Richard Marko
category:            Networking
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Wunused-packages -Werror
  exposed-modules:     Network.IRC.Bridge.Aeson
  build-depends:       base >= 4.7 && < 5
                     , ircbridge-types
                     , aeson
  default-language:    Haskell2010

test-suite roundtrip
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , ircbridge-aeson
                     , ircbridge-tests
                     , ircbridge-types
                     , aeson
                     , hspec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sorki/ircbridge
