name:                ircbridge-amqp-irccat
version:             0.1.0.0
synopsis:            ircbridge-amqp irccat compat layer
description:         Pipe messages to executable or TCP server a la irccat
homepage:            https://github.com/sorki/ircbridge
license:             BSD3
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2023 Richard Marko
category:            Networking
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Wunused-packages -Werror
  exposed-modules:     Network.IRC.Bridge.IRCCat
  build-depends:       base >= 4.7 && < 5
                     , ircbridge-types
                     , text
                     , time
  default-language:    Haskell2010

executable ircbridge-amqp-irccat
  hs-source-dirs:      .
  main-is:             Cat.hs
  ghc-options:         -Wall -Wunused-packages -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ircbridge-amqp
                     , ircbridge-amqp-irccat
                     , ircbridge-optparse
                     , ircbridge-pretty
                     , optparse-applicative
                     , text
                     , time
  default-language:    Haskell2010

executable ircbridge-amqp-irccat-tcpserver
  hs-source-dirs:      .
  main-is:             TCPServer.hs
  ghc-options:         -Wall -Wunused-packages -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ircbridge-amqp
                     , ircbridge-amqp-irccat
                     , ircbridge-optparse
                     , ircbridge-pretty
                     , bytestring
                     , optparse-applicative
                     , text
                     , time
                     , network
                     , network-run
  default-language:    Haskell2010

test-suite samples
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , ircbridge-amqp-irccat
                     , ircbridge-types
                     , hspec
                     , text
                     , time
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sorki/ircbridge
