name:                ircbridge-amqp-util
version:             0.1.0.0
synopsis:            ircbridge-amqp utils and executables
description:         Pretty print IRCOutput to terminal or send IRC messages via AMQP
homepage:            https://github.com/sorki/ircbridge
license:             BSD3
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2023 Richard Marko
category:            Networking
build-type:          Simple
cabal-version:       >=1.10

executable ircbridge-amqp-tail
  hs-source-dirs:      .
  main-is:             Tail.hs
  ghc-options:         -Wall -Wunused-packages -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ircbridge-amqp
                     , ircbridge-optparse
                     , ircbridge-pretty
                     , ircbridge-types
                     , optparse-applicative
                     , stm
                     , text
  default-language:    Haskell2010

executable ircbridge-amqp-cat
  hs-source-dirs:      .
  main-is:             Cat.hs
  ghc-options:         -Wall -Wunused-packages -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ircbridge-amqp
                     , ircbridge-optparse
                     , ircbridge-types
                     , optparse-applicative
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sorki/ircbridge
