name:                ircbridge-ircbot-amqp
version:             0.1.0.0
synopsis:            ircbot ircbridge-amqp integration
description:         ircbot part and executable for 
                     running a bidirection AMQP bridge.
homepage:            https://github.com/sorki/ircbridge
license:             BSD3
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2020 Richard Marko
category:            Networking
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.IRC.Bot.Part.AMQP
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , text
                     , time
                     , stm
                     , ircbot
                     , ircbridge-types
                     , ircbridge-ircbot
                     , ircbridge-amqp
  default-language:    Haskell2010

executable ircbridge-ircbot-amqp
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ircbot
                     , ircbridge-ircbot-amqp
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sorki/ircbridge
