name:                ircbridge-ircbot-multi
version:             0.1.0.0
synopsis:            ircbot to ircbridge to all message queues
description:         Multi-backend forwarding currently utilizing
                     ircbridge-ircbot-amqp zre ircbrdige-ircbot-zre.
homepage:            https://github.com/sorki/ircbridge
license:             BSD3
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2020 Richard Marko
category:            Networking
build-type:          Simple
cabal-version:       >=1.10

executable ircbridge-ircbot-multi
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ircbot
                     , ircbridge-ircbot-amqp
                     , ircbridge-ircbot-zre
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sorki/ircbridge
