name:                ircbridge-ircbot-zre
version:             0.1.0.0
synopsis:            ircbot ircbridge-zre integration
description:         ircbot part and executable for 
                     running a bidirection IRC<->ZRE bridge.
homepage:            https://github.com/sorki/ircbridge
license:             BSD3
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2020 Richard Marko
category:            Networking
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Wunused-packages -Werror
  exposed-modules:     Network.IRC.Bot.Part.ZRE
  build-depends:       base >= 4.7 && < 5
                     , ircbridge-ircbot
                     , ircbridge-zre
                     , ircbot
  default-language:    Haskell2010

executable ircbridge-ircbotzre
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -Wall -Wunused-packages -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ircbridge-ircbot-zre
                     , ircbot
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sorki/ircbridge
