name:                ircbridge-optparse
version:             0.1.0.0
synopsis:            Option parsing for ircbridge clients
description:         Command line option parsers
homepage:            https://github.com/sorki/ircbridge
license:             BSD3
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2023 Richard Marko
category:            Networking
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Network.IRC.Bridge.Options
  build-depends:       base >= 4.7 && < 5
                     , ircbridge-pretty
                     , ircbridge-types
                     , optparse-applicative
                     , bytestring
                     , text
                     , time
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sorki/ircbridge
