name:                ircbridge-types
version:             0.1.0.0
synopsis:            IRC bridge types
description:         Core types used for IRC message forwarding
homepage:            https://github.com/sorki/ircbridge
license:             BSD3
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2020 Richard Marko
category:            Networking
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Network.IRC.Bridge.Types
  build-depends:       base >= 4.7 && < 5
                     , text
                     , time
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sorki/ircbridge
